# alt-shift-toggle

./: .gitignore  README.md
alt-shift-notify/: CMakeLists.txt  KeyScanner.cpp  KeyScanner.hpp  SubscriberList.cpp  SubscriberList.hpp  UDevContext.cpp  UDevContext.hpp  UDevDevice.cpp  UDevDevice.hpp  alt-shift-notify.service  alt-shift-notify.service.in  filesystem.hpp  global.hpp  install.py  main-old.cpp  main.cpp  main.py  process-tag.cpp  process-tag.hpp  requirements.txt  static-sequences.hpp
alt-shift-notify/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
kde-next-layout/: CMakeLists.txt  main.cpp  setcap.cmake.in
xkb-next-layout/: CMakeLists.txt  main.cpp  xkb-next-layout.desktop
xkb-next-layout/nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.properties  project.xml
